--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '2'
 services:
   aria2-local:
     user: '501:20'
-    container_name: aria2-test
-    image: aria2-local
+    container_name: aria2
+    image: xiaozhuai/aria2
     ports:
-      - 6801:6800
+      - 6800:6800
     volumes:
       - /tmp/aria2-local/config:/config
       - /tmp/aria2-local/downloads:/downloads
